observability/prometheus/traefik2-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress-route
  namespace: monitoring
spec:
  entryPoints:
    - http
  routes:
  - match: Host(`localhost`) && PathPrefix(`/prometheus`)
    kind: Rule
    services:
    - name: prometheus
      port: 9090
